--- a/AutoMall/ViewControllers/PersonalCenter/CustomServiceCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/CustomServiceCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -31,7 +31,7 @@
                             <constraint firstAttribute="width" constant="40" id="mJG-ON-f1M"/>
                         </constraints>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                         <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                     </textField>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c7A-Gh-gNr">
@@ -79,7 +79,7 @@
                 <outlet property="radioBtn" destination="sbf-A5-7HN" id="yoA-SA-Bwt"/>
                 <outlet property="unitL" destination="mKG-Qp-me9" id="Vqp-cH-IsH"/>
             </connections>
-            <point key="canvasLocation" x="16" y="-93"/>
+            <point key="canvasLocation" x="-494" y="-60"/>
         </tableViewCell>
     </objects>
     <resources>
