--- a/AutoMall/ViewControllers/Upkeep/AutoCheckCarInfoVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/AutoCheckCarInfoVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -24,6 +24,16 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H4e-j4-KlP">
                     <rect key="frame" x="0.0" y="64" width="375" height="89"/>
                     <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yWh-F4-TTz">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="0.5"/>
+                            <color key="backgroundColor" red="0.7843137255" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="PXo-tp-HbP" customClass="NSLayoutConstraintOnePixelLine"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="行驶里程" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ecz-K0-UNC">
                             <rect key="frame" x="16" y="12" width="61.5" height="21"/>
                             <constraints>
@@ -34,7 +44,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="行驶里程" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dPe-n0-ed7">
-                            <rect key="frame" x="85" y="7" width="274" height="30"/>
+                            <rect key="frame" x="85" y="7" width="234" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="eR6-Ea-zXT"/>
                             </constraints>
@@ -52,7 +62,7 @@
                                 <constraint firstAttribute="height" constant="1" id="rgE-Ij-9Dt" customClass="NSLayoutConstraintOnePixelLine"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="燃油量" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hyg-bL-581">
@@ -65,7 +75,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="燃油量" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hJf-Q6-FZs">
-                            <rect key="frame" x="69.5" y="51" width="289.5" height="30"/>
+                            <rect key="frame" x="69.5" y="51" width="249.5" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="6tH-zU-OM3"/>
                             </constraints>
@@ -76,19 +86,61 @@
                                 <outlet property="delegate" destination="-1" id="pmF-0F-fSu"/>
                             </connections>
                         </textField>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IOY-ho-LMC">
+                            <rect key="frame" x="327" y="2" width="40" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="40" id="9IP-dN-Gyh"/>
+                                <constraint firstAttribute="height" constant="40" id="D03-1e-hml"/>
+                            </constraints>
+                            <state key="normal" image="photoBtn"/>
+                            <connections>
+                                <action selector="mileagePhoto:" destination="-1" eventType="touchUpInside" id="Yvj-2v-QST"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wci-99-2y0">
+                            <rect key="frame" x="327" y="46" width="40" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="40" id="Eup-bP-NAO"/>
+                                <constraint firstAttribute="height" constant="40" id="ho9-o6-CMP"/>
+                            </constraints>
+                            <state key="normal" image="photoBtn"/>
+                            <connections>
+                                <action selector="fuelAmountPhoto:" destination="-1" eventType="touchUpInside" id="NuG-Kj-3tL"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="scV-4H-dCF">
+                            <rect key="frame" x="0.0" y="88" width="375" height="0.5"/>
+                            <color key="backgroundColor" red="0.7843137255" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="dIL-1L-ZW9" customClass="NSLayoutConstraintOnePixelLine"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="hJf-Q6-FZs" firstAttribute="leading" secondItem="hyg-bL-581" secondAttribute="trailing" constant="8" id="0V7-YJ-KJ0"/>
+                        <constraint firstItem="scV-4H-dCF" firstAttribute="leading" secondItem="H4e-j4-KlP" secondAttribute="leading" id="7eV-Ve-umh"/>
                         <constraint firstItem="ecz-K0-UNC" firstAttribute="top" secondItem="H4e-j4-KlP" secondAttribute="top" constant="12" id="Ba5-4q-b9k"/>
                         <constraint firstAttribute="height" constant="89" id="CB1-Le-CLZ"/>
-                        <constraint firstAttribute="trailing" secondItem="dPe-n0-ed7" secondAttribute="trailing" constant="16" id="GKh-lw-cdv"/>
+                        <constraint firstAttribute="trailing" secondItem="Wci-99-2y0" secondAttribute="trailing" constant="8" id="F98-IU-aqG"/>
+                        <constraint firstItem="Wci-99-2y0" firstAttribute="leading" secondItem="hJf-Q6-FZs" secondAttribute="trailing" constant="8" id="Klg-Cb-9mf"/>
                         <constraint firstItem="hJf-Q6-FZs" firstAttribute="centerY" secondItem="hyg-bL-581" secondAttribute="centerY" id="MBm-bc-a5v"/>
+                        <constraint firstAttribute="trailing" secondItem="IOY-ho-LMC" secondAttribute="trailing" constant="8" id="OFX-0e-dNq"/>
+                        <constraint firstItem="IOY-ho-LMC" firstAttribute="leading" secondItem="dPe-n0-ed7" secondAttribute="trailing" constant="8" id="TJb-lc-Vaa"/>
                         <constraint firstItem="7Vz-bC-h5i" firstAttribute="leading" secondItem="H4e-j4-KlP" secondAttribute="leading" constant="16" id="Uft-dc-Nbe"/>
+                        <constraint firstAttribute="trailing" secondItem="scV-4H-dCF" secondAttribute="trailing" id="Yh9-go-PhP"/>
+                        <constraint firstItem="yWh-F4-TTz" firstAttribute="leading" secondItem="H4e-j4-KlP" secondAttribute="leading" id="Z44-3H-vPJ"/>
+                        <constraint firstItem="Wci-99-2y0" firstAttribute="centerY" secondItem="hyg-bL-581" secondAttribute="centerY" id="ZTP-Zq-iG5"/>
+                        <constraint firstAttribute="trailing" secondItem="yWh-F4-TTz" secondAttribute="trailing" id="a1a-ud-WFg"/>
+                        <constraint firstItem="yWh-F4-TTz" firstAttribute="top" secondItem="H4e-j4-KlP" secondAttribute="top" id="cC7-Ro-bnU"/>
                         <constraint firstItem="dPe-n0-ed7" firstAttribute="centerY" secondItem="ecz-K0-UNC" secondAttribute="centerY" id="cZH-je-Wrf"/>
                         <constraint firstItem="dPe-n0-ed7" firstAttribute="leading" secondItem="ecz-K0-UNC" secondAttribute="trailing" constant="8" id="dSj-qe-aFu"/>
-                        <constraint firstAttribute="trailing" secondItem="hJf-Q6-FZs" secondAttribute="trailing" constant="16" id="gDc-tj-4GG"/>
+                        <constraint firstItem="IOY-ho-LMC" firstAttribute="centerY" secondItem="ecz-K0-UNC" secondAttribute="centerY" id="g6A-Xs-Yqg"/>
                         <constraint firstAttribute="trailing" secondItem="7Vz-bC-h5i" secondAttribute="trailing" id="kmO-Z3-UtG"/>
+                        <constraint firstAttribute="bottom" secondItem="scV-4H-dCF" secondAttribute="bottom" id="lCe-Bc-VJK"/>
                         <constraint firstAttribute="bottom" secondItem="hyg-bL-581" secondAttribute="bottom" constant="12" id="v7x-Y9-qK9"/>
                         <constraint firstItem="ecz-K0-UNC" firstAttribute="leading" secondItem="H4e-j4-KlP" secondAttribute="leading" constant="16" id="wdP-MV-Zu2"/>
                         <constraint firstItem="7Vz-bC-h5i" firstAttribute="centerY" secondItem="H4e-j4-KlP" secondAttribute="centerY" id="y95-RQ-6yf"/>
@@ -117,7 +169,10 @@
                 <constraint firstItem="Odr-Gp-dLx" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="qve-PK-XVa"/>
                 <constraint firstAttribute="bottom" secondItem="Odr-Gp-dLx" secondAttribute="bottom" id="rMY-iF-L1h"/>
             </constraints>
-            <point key="canvasLocation" x="-278" y="-6"/>
+            <point key="canvasLocation" x="-395" y="-5"/>
         </view>
     </objects>
+    <resources>
+        <image name="photoBtn" width="20" height="20"/>
+    </resources>
 </document>
