--- a/AutoMall/ViewControllers/PersonalCenter/CustomServiceCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/CustomServiceCell.xib
@@ -49,7 +49,7 @@
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sbf-A5-7HN">
+                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sbf-A5-7HN">
                         <rect key="frame" x="282" y="6" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="UdN-RX-J86"/>
